Add x942kdf_key_check in History section ahead of time
If x952kdf_key_check does not make it into 3.4.0 this will need to be
adjusted to 3.5.0 section.

--- a/doc/man1/openssl-fipsinstall.pod.in
+++ b/doc/man1/openssl-fipsinstall.pod.in
@@ -478,6 +478,7 @@ B<-tls1_prf_key_check>
 B<-sshkdf_key_check>
 B<-sskdf_key_check>
 B<-x963kdf_key_check>
+B<-x942kdf_key_check>
 B<-ecdh_cofactor_check>
 
 =head1 COPYRIGHT
